# agent-demo

./: .gitignore  README.md  SUBMISSION_TEMPLATE.md  pyproject.toml  sitecustomize.py
demo_workspace/: README.md  app.py
orbit_agent/: __init__.py
src/orbit_agent/: __init__.py  cli.py  collector.py  planner.py  report.py
tests/: test_planner.py  test_report.py
web/: app.js  index.html  styles.css
