[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow-demo"
version = "0.1.0"
description = "A tiny agentic CLI that plans, inspects, and reports on a task."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
keywords = ["agent", "cli", "workflow", "demo"]

[project.scripts]
orbit-agent = "orbit_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
