[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-demo"
version = "0.1.0"
description = "A compact CLI demo for task planning, inspection, and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
keywords = ["agent", "cli", "workflow", "demo"]

[project.scripts]
orbit-agent = "orbit_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
